--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# compiled output
+/lib
+
 # dependencies
 /node_modules
-
-# firebase cache
-.firebase
