--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,12 @@
     "node": "10"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "date-fns": "^2.0.1",
     "express": "^4.17.1",
     "firebase-admin": "^8.3.0",
-    "firebase-functions": "^3.1.0",
-    "googleapis": "^42.0.0"
+    "firebase-functions": "^3.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
