--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "@holostats/libs": "*",
     "@swimlane/ngx-charts": "^12.0.1",
     "date-fns": "^2.0.1",
+    "ngx-spinner": "^8.0.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
