--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2018"
 build = "build.rs"
 
 [dependencies]
-chrono = { version = "0.4.7", features = ["serde"] }
-futures-preview = "0.3.0-alpha.18"
-isahc = { version = "0.7.1", default-features = false, features = ["json", "http2", "static-curl"] }
-serde = { version = "1.0.99", features = ["derive"] }
+chrono = { version = "0.4.9", features = ["serde"] }
+futures-preview = "=0.3.0-alpha.18"
+isahc = { version = "0.7.3", default-features = false, features = ["json", "http2", "static-curl"] }
+serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.40"
 url = "2.1.0"
 
