--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -11,6 +11,7 @@ futures-preview = "=0.3.0-alpha.18"
 isahc = { version = "0.7.3", default-features = false, features = ["json", "http2", "static-curl"] }
 serde = { version = "1.0.100", features = ["derive"] }
 serde_json = "1.0.40"
+tokio = "=0.2.0-alpha.4"
 url = "2.1.0"
 
 [profile.release]
