--- a/etc/vtuber_stat.service
+++ b/etc/vtuber_stat.service
@@ -4,6 +4,7 @@ Description=VTuber Stat
 [Service]
 Type=simple
 ExecStart=/path/to/holostats-scripts/target/release/vtuber_stat
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
