--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -7,11 +7,11 @@ build = "build.rs"
 
 [dependencies]
 chrono = { version = "0.4.9", features = ["serde"] }
-futures-preview = "=0.3.0-alpha.18"
-isahc = { version = "0.7.3", default-features = false, features = ["json", "http2", "static-curl"] }
+futures-preview = "0.3.0-alpha.18"
+isahc = { version = "0.7.4", default-features = false, features = ["json", "http2", "static-curl"] }
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.40"
-tokio = "=0.2.0-alpha.4"
+tokio = "0.2.0-alpha.5"
 url = "2.1.0"
 
 [profile.release]
