feat(web): display git commit and links hash in footer

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ cache:
     - node_modules
 
 script:
+  - sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" web/src/environments/*
   - yarn --cwd web/ build --prod
 
 deploy:
