--- a/firebase.json
+++ b/firebase.json
@@ -29,6 +29,13 @@
         "source": "**/*.+([0-9a-f]).@(css|js)",
         "headers": [{ "key": "Cache-Control", "value": "max-age=2592000" }]
       }
+    ],
+    "redirects": [
+      {
+        "source": "/:name.jpg",
+        "destination": "/assets/quotes/:name.jpg",
+        "type": 301
+      }
     ]
   }
 }
