--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -8,7 +8,7 @@ build = "build.rs"
 [dependencies]
 chrono = { version = "0.4.9", features = ["serde"] }
 futures-preview = "0.3.0-alpha.18"
-isahc = { version = "0.7.4", default-features = false, features = ["json", "http2", "static-curl"] }
+isahc = { version = "0.7.4", default-features = false, features = ["json"] }
 serde = { version = "1.0.102", features = ["derive"] }
 serde_json = "1.0.41"
 tokio = "0.2.0-alpha.5"
