--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -7,11 +7,11 @@ build = "build.rs"
 
 [dependencies]
 chrono = { version = "0.4.10", features = ["serde"] }
-futures-preview = "0.3.0-alpha.18"
+futures = "0.3.1"
 isahc = { version = "0.8.1", default-features = false, features = ["json"] }
 serde = { version = "1.0.103", features = ["derive"] }
-serde_json = "1.0.42"
-tokio = "0.2.0-alpha.5"
+serde_json = "1.0.43"
+tokio = { version = "0.2.2", features = ["macros"] }
 url = "2.1.0"
 
 [profile.release]
