--- a/scripts/Cargo.toml
+++ b/scripts/Cargo.toml
@@ -14,6 +14,9 @@ serde_json = "1.0.44"
 tokio = { version = "0.2.6", features = ["macros"] }
 url = "2.1.0"
 
+[build-dependencies]
+serde_json = "1.0.44"
+
 [profile.release]
 lto = true
 
