--- a/functions/package.json
+++ b/functions/package.json
@@ -10,7 +10,7 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "main": "lib/index.js",
+  "main": "lib/functions/src/index.js",
   "engines": {
     "node": "10"
   },
@@ -18,11 +18,14 @@
     "cors": "^2.8.5",
     "date-fns": "^2.9.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
     "firebase-admin": "^8.9.0",
     "firebase-functions": "^3.3.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/express-validator": "^3.0.0",
     "typescript": "~3.5.3"
   }
 }
