--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "outDir": "lib",
     "sourceMap": false,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "baseUrl": "./",
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "vtubers": ["../vtubers.json"]
+    }
   },
   "compileOnSave": true,
   "include": ["src"]
