--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,15 +8,15 @@ build = "build.rs"
 [dependencies]
 bytes = "0.5.4"
 chrono = { version = "0.4.10", features = ["serde"] }
-futures = "0.3.1"
-reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls" ] }
+futures = "0.3.3"
+reqwest = { version = "0.10.1", default-features = false, features = ["json", "rustls-tls"] }
 roxmltree = "0.9.0"
 serde = { version = "1.0.104", features = ["derive"] }
-serde_json = "1.0.45"
-sqlx = { version = "0.2", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
-tokio = { version = "0.2", features = ["macros"] }
+serde_json = "1.0.46"
+sqlx = { version = "0.2.5", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono"] }
+tokio = { version = "0.2.11", features = ["macros"] }
 url = "2.1.1"
-warp = "0.2"
+warp = { version = "0.2.1", default-features = false }
 
 [profile.release]
 lto = true
