feat(web): switch from date-fns to dayjs

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -15,6 +15,7 @@
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
     "lib": ["es2018", "dom"],
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "vtubers": ["./vtubers.json"]
     }
