--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "~9.1.1",
     "@angular/service-worker": "~9.1.1",
     "@swimlane/ngx-charts": "^14.0.0",
-    "date-fns": "^2.12.0",
+    "dayjs": "^1.8.25",
     "rxjs": "~6.5.5",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.3"
