feat(web): setup @angular/localize

--- a/web/angular.json
+++ b/web/angular.json
@@ -1,7 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
-  "newProjectRoot": "projects",
+  "defaultProject": "holostats",
   "projects": {
     "holostats": {
       "projectType": "application",
@@ -31,7 +31,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "hs",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
@@ -48,7 +48,8 @@
               "src/manifest.webmanifest"
             ],
             "styles": ["src/styles.scss"],
-            "scripts": []
+            "scripts": [],
+            "i18nMissingTranslation": "error"
           },
           "configurations": {
             "production": {
@@ -103,6 +104,5 @@
         }
       }
     }
-  },
-  "defaultProject": "holostats"
+  }
 }
