build(web): upgrade to angular 10

--- a/web/angular.json
+++ b/web/angular.json
@@ -11,7 +11,7 @@
         },
         "@schematics/angular:component": {
           "skipTests": true,
-          "styleext": "scss"
+          "style": "scss"
         },
         "@schematics/angular:directive": {
           "skipTests": true
