--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,34 +11,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.1",
-    "@angular/cdk": "~9.2.0",
-    "@angular/common": "~9.1.1",
-    "@angular/compiler": "~9.1.1",
-    "@angular/core": "~9.1.1",
-    "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/forms": "~9.1.1",
-    "@angular/localize": "^9.1.4",
-    "@angular/material": "~9.2.0",
-    "@angular/platform-browser": "~9.1.1",
-    "@angular/platform-browser-dynamic": "~9.1.1",
-    "@angular/router": "~9.1.1",
-    "@angular/service-worker": "~9.1.1",
-    "@swimlane/ngx-charts": "^14.0.0",
+    "@angular/animations": "~10.0.14",
+    "@angular/cdk": "~10.1.3",
+    "@angular/common": "~10.0.14",
+    "@angular/compiler": "~10.0.14",
+    "@angular/core": "~10.0.14",
+    "@angular/flex-layout": "^10.0.0-beta.32",
+    "@angular/forms": "~10.0.14",
+    "@angular/localize": "^10.0.14",
+    "@angular/material": "~10.1.3",
+    "@angular/platform-browser": "~10.0.14",
+    "@angular/platform-browser-dynamic": "~10.0.14",
+    "@angular/router": "~10.0.14",
+    "@angular/service-worker": "~10.0.14",
+    "@swimlane/ngx-charts": "^16.0.0",
     "dayjs": "^1.8.26",
     "ngx-ellipsis": "^2.2.2",
-    "rxjs": "~6.5.5",
-    "tslib": "^1.11.1",
+    "rxjs": "~6.6.2",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.4",
+    "@angular-devkit/build-angular": "~0.1000.8",
+    "@angular/cli": "~10.0.8",
+    "@angular/compiler-cli": "~10.0.14",
+    "@angular/language-service": "~10.0.14",
+    "@types/d3-format": "^1.3.1",
+    "@types/d3-time-format": "^2.1.1",
     "@types/node": "~13.13.4",
     "ts-node": "~8.10.1",
-    "tslint": "~6.1.2",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.7"
   }
 }
