--- a/web/package.json
+++ b/web/package.json
@@ -17,12 +17,14 @@
     "@angular/compiler": "~10.1.1",
     "@angular/core": "~10.1.1",
     "@angular/forms": "~10.1.1",
-    "@angular/localize": "^10.1.1",
+    "@angular/localize": "~10.1.1",
     "@angular/material": "~10.2.0",
     "@angular/platform-browser": "~10.1.1",
     "@angular/platform-browser-dynamic": "~10.1.1",
+    "@angular/platform-server": "~10.1.1",
     "@angular/router": "~10.1.1",
     "@angular/service-worker": "~10.1.1",
+    "@nguniversal/common": "~10.1.0",
     "@swimlane/ngx-charts": "^16.0.0",
     "date-fns": "^2.16.1",
     "ngx-ellipsis": "^2.2.2",
