--- a/web/package.json
+++ b/web/package.json
@@ -25,8 +25,12 @@
     "@angular/router": "~10.1.1",
     "@angular/service-worker": "~10.1.1",
     "@nguniversal/common": "~10.1.0",
+    "@nguniversal/express-engine": "^10.1.0",
     "@swimlane/ngx-charts": "^16.0.0",
     "date-fns": "^2.16.1",
+    "express": "^4.17.1",
+    "ngx-cookie": "^5.0.0",
+    "ngx-cookie-backend": "^5.0.0",
     "ngx-ellipsis": "^2.2.2",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
@@ -39,6 +43,7 @@
     "@angular/language-service": "~10.1.1",
     "@types/d3-format": "^1.3.1",
     "@types/d3-time-format": "^2.1.1",
+    "@types/express": "^4.17.8",
     "@types/node": "~13.13.4",
     "ts-node": "~8.10.1",
     "tslint": "~6.1.0",
