--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "0.2.22", features = ["macros"] }
 url = "2.1.1"
 warp = { version = "0.2.5", default-features = false }
 cfg-if = "0.1.10"
+serde_with = "1.4.0"
 
 [profile.release]
 lto = true
