--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@angular/service-worker": "~10.1.3",
+    "@cloudflare/kv-asset-handler": "^0.0.12",
     "@nguniversal/common": "~10.1.0",
     "@nguniversal/express-engine": "^10.1.0",
     "@swimlane/ngx-charts": "^16.0.0",
@@ -41,6 +42,7 @@
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
     "@angular/language-service": "~10.1.3",
+    "@cloudflare/workers-types": "^2.0.0",
     "@types/d3-format": "^1.3.1",
     "@types/d3-time-format": "^2.1.1",
     "@types/express": "^4.17.8",
