--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -1,9 +1,21 @@
 name: Angular
 
-on: [push, pull_request]
+on:
+  push:
+    paths:
+      - web
+      - .github/workflows/angular.yml
+  pull_request:
+    paths:
+      - web
+
+defaults:
+  run:
+    working-directory: web
 
 jobs:
-  ci:
+  build_and_test:
+    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
@@ -31,25 +43,52 @@ jobs:
           node-version: 10.x
 
       - name: Run Prettier
-        working-directory: web
         run: |
           yarn global add prettier
           prettier --check --ignore-path .gitignore 'src/**/*.{ts,js,json.html,scss}'
 
-      - name: Build web
-        if: github.ref == 'refs/heads/master'
-        working-directory: web
+      - name: Build
         run: |
           yarn install
           sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
           yarn ng run holostats:app-shell:production
+          yarn ng run holostats:workers:production
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - name: Add yarn global bin to path
+        run: echo "::add-path::$(yarn global bin)"
+
+      - name: Cache
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Build
+        run: |
+          yarn install
+          sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
+          yarn ng run holostats:app-shell:production
+          yarn ng run holostats:workers:production
 
       - name: Deploy
-        if: github.ref == 'refs/heads/master'
-        working-directory: web
-        run: |
-          rsync -avzzP dist/server/main.js dist/browser/index.html rsync://ci@${{ secrets.RSYNC_HOST }}/ssr
-          rm dist/browser/index.html
-          rsync -avzzP dist/browser/* rsync://ci@${{ secrets.RSYNC_HOST }}/web
-        env:
-          RSYNC_PASSWORD: ${{ secrets.RSYNC_PASSWORD }}
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          environment: prod
+          workingDirectory: web
