--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -44,12 +44,15 @@ jobs:
           sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
           yarn ng run holostats:app-shell:production
 
+      - name: Build worker
+        if: github.ref == 'refs/heads/master'
+        working-directory: web
+        run: yarn ng run holostats:workers:production
+
       - name: Deploy
         if: github.ref == 'refs/heads/master'
         working-directory: web
-        run: |
-          rsync -avzzP dist/server/main.js dist/browser/index.html rsync://ci@${{ secrets.RSYNC_HOST }}/ssr
-          rm dist/browser/index.html
-          rsync -avzzP dist/browser/* rsync://ci@${{ secrets.RSYNC_HOST }}/web
-        env:
-          RSYNC_PASSWORD: ${{ secrets.RSYNC_PASSWORD }}
+        uses: cloudflare/wrangler-action@1.3.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          environment: "prod"
