--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -2,8 +2,13 @@ name: Angular
 
 on: [push, pull_request]
 
+defaults:
+  run:
+    working-directory: web
+
 jobs:
-  ci:
+  test:
+    name: Test
     runs-on: ubuntu-latest
 
     steps:
@@ -31,27 +36,29 @@ jobs:
           node-version: 10.x
 
       - name: Run Prettier
-        working-directory: web
         run: |
           yarn global add prettier
           prettier --check --ignore-path .gitignore 'src/**/*.{ts,js,json.html,scss}'
 
-      - name: Build web
-        if: github.ref == 'refs/heads/master'
-        working-directory: web
+      - name: Build
         run: |
           yarn install
           sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
-          yarn ng run holostats:app-shell:production
+          yarn ng run holostats:app-shell
+          yarn ng run holostat:workers
 
-      - name: Build worker
-        if: github.ref == 'refs/heads/master'
-        working-directory: web
-        run: yarn ng run holostats:workers:production
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    if: github.ref == 'refs/heads/master'
+
+      - name: Production build
+        run: |
+          yarn ng run holostats:app-shell:production
+          yarn ng run holostats:workers:production
 
       - name: Deploy
-        if: github.ref == 'refs/heads/master'
-        working-directory: web
         uses: cloudflare/wrangler-action@1.3.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
